Restyle checkbox input. Overwrite webkit native styling. This will fix the weird sizing issue seen on iOS

--- a/app/assets/stylesheets/_partials/_components/_forms.scss
+++ b/app/assets/stylesheets/_partials/_components/_forms.scss
@@ -30,9 +30,72 @@ input[type="text"] {
     }
 }
 
+// Checkbox
+// --------------------------------------------------
+// Source: http://codepen.io/KenanYusuf/pen/PZKEKd
+
 input[type="checkbox"] {
-    margin-right: 7px;
+    transition: all 0.3s ease;
+    -webkit-appearance: none;
+
+    &:focus { outline: none; }
 }
+
+.control {
+    cursor: pointer;
+    display: block;
+    font-size: 18px;
+    margin-bottom: 15px;
+    padding-left: 30px;
+    position: relative;
+
+    input {
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        z-index: -1;
+
+        &:focus ~ .indicator,
+        &:checked ~ .indicator,
+        &:checked:focus ~ .indicator{
+            background: transparent;
+            border: 2px solid white;
+        }
+        &:disabled ~ .indicator {
+            background: rgba(255,255,255,0.1);
+            opacity: 0.6;
+            pointer-events: none;
+        }
+        &:checked ~ .indicator:after {
+            display: block;
+        }
+        &:checked + .indicator:after {
+            content: "✓";
+            color: white;
+            top: -4px;
+            left: 2px;
+        }
+        &:checked input:disabled ~ .indicator:after {
+            border-color: $primaryColor;
+        }
+    }
+    .indicator {
+        background: transparent;
+        border: 2px solid $primaryColor;
+        height: 20px;
+        position: absolute;
+        top: 2px;
+        left: 0;
+        width: 20px;
+
+        &::after {
+            content: '';
+            display: none;
+            position: absolute;
+        }
+    }
+}
+
 
 // Error Validation
 // --------------------------------------------------
